--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 CLOUDINARY_URL="cloudinary://<your_api_key>:<your_api_secret>@dutrfbtao"
 BACKEND_STRING="https://backendchatapp-11.onrender.com"
+WS_STRING="https://chatappwebsocket-8.onrender.com"
