--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 CLOUDINARY_URL="cloudinary://<your_api_key>:<your_api_secret>@dutrfbtao"
-BACKEND_STRING="https://backendchatapp-11.onrender.com"
+BACKEND_STRING="https://backend-chat-app-3.onrender.com"
 WS_STRING="https://chatappwebsocket-8.onrender.com"
